--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   "author": "kelbin jacob",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "mongoose": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1",
     "validator": "^13.11.0",
     "winston": "^3.11.0"
+  },
+  "devDependencies": {
+    "mongoose": "^8.0.1",
+    "ts-node": "^10.9.1"
   }
 }
